# pega-texto-memory

./: CMakeLists.txt  README.md
cmake/: FindPegaTextoMemory.cmake
pkg-config/: CMakeLists.txt  pega-texto-memory.pc.in
src/: CMakeLists.txt  main.c  pega-texto-memory.c  pega-texto-memory.h
